@@ -28,6 +28,9 @@ Version 1.3.1 (unreleased)
   - add ICPC 12.0, works with both MCSTL (needs libstdc++ from GCC 4.2) and
     parallel mode (needs libstdc++ from GCC 4.3 (not 4.4/4.5))
   - add CLANG++ 2.8
+  - add MSVC 2010/Windows 7
+  - allow the library name generated by MSVC to be changed by setting LIBNAME
+    and redefining STXXL_LIBNAME (defaults to "stxxl")
 * Under-the-hood improvements
   - code cleanup
 * Documentation updates
